# kmag

./: .flatpak-manifest.json  .kde-ci.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile.am  Messages.sh  README  README.md  TODO  colorsim.cpp  colorsim.h  focustrackconfig.h.in  kmag.cpp  kmag.desktop  kmag.h  kmag.kdevprj  kmag.lsm  kmag.mdk.spec  kmag.qrc  kmagselrect.cpp  kmagselrect.h  kmagui.rc  kmagzoomview.cpp  kmagzoomview.h  main.cpp  org.kde.kmag.appdata.xml  org.kde.kmag.desktop  snapcraft.yaml  version.h
doc/: CMakeLists.txt  Makefile.am  index.docbook  man-kmag.1.docbook
doc/images/: Makefile.am
pics/: CMakeLists.txt
po/ar/: kmag.po
po/ast/: kmag.po
po/be/: kmag.po
po/bg/: kmag.po
po/br/: kmag.po
po/bs/: kmag.po
po/ca/: kmag.po
po/ca/docs/kmag/: index.docbook  man-kmag.1.docbook
po/ca@valencia/: kmag.po
po/cs/: kmag.po
po/cy/: kmag.po
po/da/: kmag.po
po/de/: kmag.po
po/de/docs/kmag/: index.docbook  man-kmag.1.docbook
po/el/: kmag.po
po/en_GB/: kmag.po
po/eo/: kmag.po
po/es/: kmag.po
po/es/docs/kmag/: index.docbook  man-kmag.1.docbook
po/et/: kmag.po
po/et/docs/kmag/: man-kmag.1.docbook
po/eu/: kmag.po
po/fa/: kmag.po
po/fi/: kmag.po
po/fr/: kmag.po
po/fr/docs/kmag/: index.docbook  man-kmag.1.docbook
po/ga/: kmag.po
po/gl/: kmag.po
po/he/: kmag.po
po/hi/: kmag.po
po/hne/: kmag.po
po/hr/: kmag.po
po/hu/: kmag.po
po/ia/: kmag.po
po/is/: kmag.po
po/it/: kmag.po
po/it/docs/kmag/: index.docbook  man-kmag.1.docbook
po/ja/: kmag.po
po/ka/: kmag.po
po/kk/: kmag.po
po/km/: kmag.po
po/ko/: kmag.po
po/ko/docs/kmag/: index.docbook
po/ku/: kmag.po
po/lt/: kmag.po
po/lv/: kmag.po
po/mk/: kmag.po
po/ml/: kmag.po
po/mr/: kmag.po
po/ms/: kmag.po
po/nb/: kmag.po
po/nds/: kmag.po
po/ne/: kmag.po
po/nl/: kmag.po
po/nl/docs/kmag/: index.docbook  man-kmag.1.docbook
po/nn/: kmag.po
po/oc/: kmag.po
po/pa/: kmag.po
po/pl/: kmag.po
po/pt/: kmag.po
po/pt/docs/kmag/: index.docbook  man-kmag.1.docbook
po/pt_BR/: kmag.po
po/pt_BR/docs/kmag/: index.docbook  man-kmag.1.docbook
po/ro/: kmag.po
po/ru/: kmag.po
po/ru/docs/kmag/: index.docbook  man-kmag.1.docbook
po/sa/: kmag.po
po/se/: kmag.po
po/sk/: kmag.po
po/sl/: kmag.po
po/sl/docs/kmag/: index.docbook  man-kmag.1.docbook
po/sq/: kmag.po
po/sr/: kmag.po
po/sr@ijekavian/: kmag.po
po/sr@ijekavianlatin/: kmag.po
po/sr@latin/: kmag.po
po/sv/: kmag.po
po/sv/docs/kmag/: index.docbook  man-kmag.1.docbook
po/ta/: kmag.po
po/tg/: kmag.po
po/th/: kmag.po
po/tr/: kmag.po
po/ug/: kmag.po
po/uk/: kmag.po
po/uk/docs/kmag/: index.docbook  man-kmag.1.docbook
po/vi/: kmag.po
po/zh_CN/: kmag.po
po/zh_TW/: kmag.po
src/: CMakeLists.txt  Messages.sh  colorsim.cpp  colorsim.h  focustrackconfig.h.in  kmag.cpp  kmag.h  kmagselrect.cpp  kmagselrect.h  kmagui.rc  kmagzoomview.cpp  kmagzoomview.h  main.cpp  org.kde.kmag.appdata.xml  org.kde.kmag.desktop  org.kde.kmag.metainfo.xml
templates/: cpp_template
