####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = screenshot.png 

install-data-local:
	$(mkinstalldirs) $(kde_htmldir)/en/kmag/images/
	$(INSTALL_DATA) $(srcdir)/screenshot.png $(kde_htmldir)/en/kmag/images/screenshot.png

uninstall-local:
	-rm -f $(kde_htmldir)/en/kmag/images/screenshot.png

####### kdevelop will overwrite this part!!! (end)############
